# nerian-vision-software

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README-WIN32.md  README.md
gentl-producer/: CMakeLists.txt  README.md
gentl-producer/examples/: DEADJOE  Makefile.MIL  halcon_example.hdev  matlab_example.m  mil_example.cpp
gentl-producer/genicam/: gentl-1.5.h
gentl-producer/src/: CMakeLists.txt  exports.def  gentl-adapter.cpp
gentl-producer/src/device/: deviceportimpl.cpp  deviceportimpl.h  logicaldevice.cpp  logicaldevice.h  physicaldevice.cpp  physicaldevice.h
gentl-producer/src/event/: event.cpp  event.h  eventqueue.h
gentl-producer/src/interface/: interface.cpp  interface.h  interfaceportimpl.cpp  interfaceportimpl.h
gentl-producer/src/misc/: common.h  disparity_testdata.cpp  handle.h  infoquery.cpp  infoquery.h  left_testdata.cpp  port.cpp  port.h  portimplementation.h  testdata.h  xmlfiles.h
gentl-producer/src/stream/: buffer.cpp  buffer.h  buffermapping.cpp  buffermapping.h  datastream.cpp  datastream.h  streamportimpl.cpp  streamportimpl.h
gentl-producer/src/system/: library.cpp  library.h  system.cpp  system.h  systemportimpl.cpp  systemportimpl.h
gentl-producer/test/: CMakeLists.txt  test-all.cpp  test-common.h  test-device.cpp  test-event.cpp  test-interface.cpp  test-library.cpp  test-port.cpp  test-stream.cpp  test-system.cpp
gentl-producer/xml/: datastream.xml  device.xml  gencode.sh  interface.xml  registers_features.txt  remote.xml  system.xml
libvisiontransfer/: CHANGELOG.md  CMakeLists.txt  README.md  doxygen.in  doxygen_footer.html  doxygen_layout.xml  publish_api.sh  update_header_version.sh
libvisiontransfer/doc/: index.html
libvisiontransfer/examples/: CMakeLists.txt  all_events_example.cpp  asynctransfer_example.cpp  external_buffer_example.cpp  imagetransfer_example.cpp  imu_data_channel_example.cpp  input_transfer_example.cpp  open3d_example.cpp  opencv_example.cpp  parameter_enumeration_example.cpp  parameter_example.cpp  parameter_poll_example.cpp  parameter_set_batch_write_example.cpp  pcl_example.cpp  reconstruct3d_example.cpp  server_example.cpp  software_trigger_example.cpp  temperature_example.cpp
libvisiontransfer/python/: .#Makefile  .hgignore  CMakeLists.txt  README.md  setup.py
libvisiontransfer/python/examples/: .gitignore  DEADJOE  example_open3d.py  example_open3d_live.py  example_opencv.py  example_parameters.py  example_pickle.py  example_pointcloud.py  example_qt.py  pointcloud_00.csv
libvisiontransfer/python/tools/: autogen_docstrings.py  autogen_parameters.py  generate_sources.py
libvisiontransfer/python/visiontransfer_src/: visiontransfer.pyx.in  visiontransfer_cpp.pxd.in
libvisiontransfer/visiontransfer/: .#networking.cpp  CMakeLists.txt  alignedallocator.h  asynctransfer.cpp  asynctransfer.h  bitconversions.cpp  bitconversions.h  common.h  common.he  conversionhelpers.h  datablockprotocol.cpp  datablockprotocol.h  datachannel-control.h  datachannel-imu-bno080.cpp  datachannel-imu-bno080.h  datachannelservice.cpp  datachannelservice.h  datachannelservicebase.cpp  datachannelservicebase.h  deviceenumeration.cpp  deviceenumeration.h  deviceinfo.h  deviceparameters.cpp  deviceparameters.h  exceptions.h  externalbuffer.cpp  externalbuffer.h  imagepair.h  imageprotocol.cpp  imageprotocol.h  imageset-opencv.h  imageset.cpp  imageset.h  imagetransfer.cpp  imagetransfer.h  internalinformation.cpp  internalinformation.h  libraryinfo.cpp  libraryinfo.h  networking.cpp  (+26 more)
libvisiontransfer/visiontransfer/internal/: alignedallocator.h  bitconversions.cpp  bitconversions.h  conversionhelpers.h  datablockprotocol.cpp  datablockprotocol.h  datachannel-control.h  datachannel-imu-bno080.cpp  datachannel-imu-bno080.h  datachannelservicebase.cpp  datachannelservicebase.h  internalinformation.cpp  internalinformation.h  networking.cpp  networking.h  parameterserialization.cpp  parameterserialization.h  parametertransfer.cpp  parametertransfer.h  parametertransferdata.h  protocol-sh2-imu-bno080.h  sensorringbuffer.h  tokenizer.h
nvcom/: CMakeLists.txt  README.md  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  deploy_appimage.sh  displaywidget.cpp  displaywidget.h  imagereader.cpp  imagereader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nvcom.cpp  nvcom.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  qtopen3dvisualizer.cpp  qtopen3dvisualizer.h  resources.qrc  run-windows.bat  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  windows-resource.rc
nvcom/helpers/: colorcoder.cpp  colorcoder.h  ratelimit.cpp  ratelimit.h
